--- a/html/contacto.html
+++ b/html/contacto.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-    <div class="contenedor grid_contacto">
+    <div class="contenedor grid_contacto" id="contacto">
         <header>
             <div class="arriba">
                 <div class="logo">
@@ -55,11 +55,11 @@
                 <label for="check"><i class="fa-solid fa-bars"></i></label>
                 <nav class="menu">
                     <ul>
-                        <li><a href="../index.html"> Inicio </a></li>
-                        <li><a href="venta.html"> Venta </a></li>
-                        <li><a href="alquiler.html"> Alquiler </a></li>
-                        <li><a href="nosotros.html"> Nosotros </a></li>
-                        <li><a href="contacto.html"> Contacto </a></li>
+                        <li><a class="nashei" id="enlace1" href="../index.html"> Inicio </a></li>
+                        <li><a id="enlace2" href="venta.html"> Venta </a></li>
+                        <li><a id="enlace3" href="alquiler.html"> Alquiler </a></li>
+                        <li><a id="enlace4" href="nosotros.html"> Nosotros </a></li>
+                        <li><a id="enlace5" href="contacto.html"> Contacto </a></li>
                     </ul>
                 </nav>
             </div>
@@ -186,6 +186,7 @@
                         AOS.init();
                     </script>
                     <script src="../js/formulario.js"></script>
+                    <script src="../js/contacto.js"></script>
 </body>
 
 </html>
