--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <div class="contenedor grid_inicio">
+    <div class="contenedor grid_inicio" id="index">
         <header>
             <div class="arriba">
                 <div class="logo">
@@ -49,11 +49,11 @@
                 <label for="check"><i class="fa-solid fa-bars"></i></label>
                 <nav class="menu">
                     <ul>
-                        <li><a href="index.html"> Inicio </a></li>
-                        <li><a href="html/venta.html"> Venta </a></li>
-                        <li><a href="html/alquiler.html"> Alquiler </a></li>
-                        <li><a href="html/nosotros.html"> Nosotros </a></li>
-                        <li><a href="html/contacto.html"> Contacto </a></li>
+                        <li><a class="nashei" id="enlace1" href="index.html"> Inicio </a></li>
+                        <li><a id="enlace2" href="html/venta.html"> Venta </a></li>
+                        <li><a id="enlace3" href="html/alquiler.html"> Alquiler </a></li>
+                        <li><a id="enlace4" href="html/nosotros.html"> Nosotros </a></li>
+                        <li><a id="enlace5" href="html/contacto.html"> Contacto </a></li>
                     </ul>
                 </nav>
             </div>
@@ -82,7 +82,9 @@
                     illo expedita excepturi reiciendis quos, ab natus. Veniam libero
                     labore nostrum quas enim?
                     <br> <br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo veniam labore autem unde magni alias deserunt cumque iusto, voluptas iste iure temporibus, ipsam voluptatum magnam ea sunt. Molestiae, placeat laboriosam? Praesentium, dolore excepturi!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo veniam labore autem unde magni alias
+                    deserunt cumque iusto, voluptas iste iure temporibus, ipsam voluptatum magnam ea sunt. Molestiae,
+                    placeat laboriosam? Praesentium, dolore excepturi!
                 </p>
             </div>
         </section>
@@ -151,6 +153,7 @@
     <script>
         AOS.init();
     </script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
