--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -44,7 +44,7 @@
 </head>
 
 <body>
-    <div class="contenedor grid_nosotros">
+    <div class="contenedor grid_nosotros" id="nosotros">
         <header>
             <div class="arriba">
                 <div class="logo">
@@ -60,11 +60,11 @@
                 <label for="check"><i class="fa-solid fa-bars"></i></label>
                 <nav class="menu">
                     <ul>
-                        <li><a href="../index.html"> Inicio </a></li>
-                        <li><a href="venta.html"> Venta </a></li>
-                        <li><a href="alquiler.html"> Alquiler </a></li>
-                        <li><a href="nosotros.html"> Nosotros </a></li>
-                        <li><a href="contacto.html"> Contacto </a></li>
+                        <li><a class="nashei" id="enlace1" href="../index.html"> Inicio </a></li>
+                        <li><a id="enlace2" href="venta.html"> Venta </a></li>
+                        <li><a id="enlace3" href="alquiler.html"> Alquiler </a></li>
+                        <li><a id="enlace4" href="nosotros.html"> Nosotros </a></li>
+                        <li><a id="enlace5" href="contacto.html"> Contacto </a></li>
                     </ul>
                 </nav>
             </div>
@@ -204,6 +204,7 @@
     <script>
         AOS.init();
     </script>
+    <script src="../js/nosotros.js"></script>
 </body>
 
 </html>
