--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -205,6 +205,7 @@
         AOS.init();
     </script>
     <script src="../js/nosotros.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
 
 </html>
