--- a/index.html
+++ b/index.html
@@ -32,7 +32,21 @@
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 
-<body>
+<body class="hidden">
+    <div class="centrado" id="onload">
+        <div class="loadingio-spinner-double-ring-8klz9uupyd">
+            <div class="ldio-6k96ilatv2t">
+                <div></div>
+                <div></div>
+                <div>
+                    <div></div>
+                </div>
+                <div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="contenedor grid_inicio" id="index">
         <header>
             <div class="arriba">
@@ -154,6 +168,7 @@
         AOS.init();
     </script>
     <script src="js/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
 
 </html>
