--- a/html/alquiler.html
+++ b/html/alquiler.html
@@ -37,7 +37,21 @@
     <link rel="stylesheet" href="../css/estilos.css" />
 </head>
 
-<body>
+<body class="hidden">
+    <div class="centrado" id="onload">
+        <div class="loadingio-spinner-double-ring-8klz9uupyd">
+            <div class="ldio-6k96ilatv2t">
+                <div></div>
+                <div></div>
+                <div>
+                    <div></div>
+                </div>
+                <div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="contenedor grid_venta_alquiler" id="alquiler">
         <header>
             <div class="arriba">
@@ -276,6 +290,7 @@
         AOS.init();
     </script>
     <script src="../js/alquiler.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
 
 </html>
