--- a/html/contacto.html
+++ b/html/contacto.html
@@ -38,7 +38,21 @@
     <link rel="stylesheet" href="../css/estilos.css" />
 </head>
 
-<body>
+<body class="hidden">
+    <div class="centrado" id="onload">
+        <div class="loadingio-spinner-double-ring-8klz9uupyd">
+            <div class="ldio-6k96ilatv2t">
+                <div></div>
+                <div></div>
+                <div>
+                    <div></div>
+                </div>
+                <div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="contenedor grid_contacto" id="contacto">
         <header>
             <div class="arriba">
@@ -187,6 +201,7 @@
                     </script>
                     <script src="../js/formulario.js"></script>
                     <script src="../js/contacto.js"></script>
+                    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
 
 </html>
