--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <body class="hidden">
     <div class="centrado" id="onload">
-        <div class="loadingio-spinner-double-ring-8klz9uupyd">
-            <div class="ldio-6k96ilatv2t">
+        <div class="loadingio-spinner-double-ring-8klz9uupyd" id="uno">
+            <div class="ldio-6k96ilatv2t" id="dos">
                 <div></div>
                 <div></div>
                 <div>
