--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <!-- TERCER TIPO DE LETRA -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,700" rel="stylesheet"
         type="text/css" />
+    <!-- CUARTO TIPO DE LETRA -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300&display=swap" rel="stylesheet">
     <!-- FONTAWESOME -->
     <script src="https://kit.fontawesome.com/7d65b7aff4.js" crossorigin="anonymous"></script>
     <!-- ANIMACIONES -->
