--- a/html/alquiler.html
+++ b/html/alquiler.html
@@ -33,6 +33,7 @@
         content="Propiedades, inmuebles, casas, departamentos, countries, barrios cer rados, alquiler, venta, compra, alquiler temporario, argentina, cordoba franquicias inmobiliarias. Casas y Departamentos, inmuebles, propiedades, Venta y Alquiler, Argentina">
     <!-- ARCHIVOS VINCULADOS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="icon" href="../imagenes/icono FINAL.ico" />
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/estilos.css" />
@@ -336,7 +337,9 @@
                         </div>
                     </div>
                     <div class="info_casa">
-                        <i class="fa-solid fa-xmark cruz" id="cruz"></i>
+                        <div class="cont_cruz">
+                            <i class="fa-solid fa-xmark cruz" id="cruz"></i>
+                        </div>
                         <h2>Casa en las Delicias</h3>
                         <div class="desc_icono2">
                             <div class="dorm">
