--- a/html/venta.html
+++ b/html/venta.html
@@ -32,6 +32,8 @@
     <meta name="keywords"
         content="Propiedades, inmuebles, casas, departamentos, countries, barrios cer rados, alquiler, venta, compra, alquiler temporario, argentina, cordoba franquicias inmobiliarias. Casas y Departamentos, inmuebles, propiedades, Venta y Alquiler, Argentina">
     <!-- ARCHIVOS VINCULADOS -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="icon" href="../imagenes/icono FINAL.ico" />
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/estilos.css" />
