--- a/html/alquiler.html
+++ b/html/alquiler.html
@@ -340,7 +340,7 @@
                         <div class="cont_cruz">
                             <i class="fa-solid fa-xmark cruz" id="cruz"></i>
                         </div>
-                        <h2>Casa en las Delicias</h3>
+                        <!-- <h2>Casa en las Delicias</h3> -->
                         <div class="desc_icono2">
                             <div class="dorm">
                                 <i class="fa-solid fa-bed"></i> <span>2 Dorm</span>
