--- a/html/alquiler.html
+++ b/html/alquiler.html
@@ -39,21 +39,22 @@
     <link rel="stylesheet" href="../css/estilos.css" />
 </head>
 
-<body class="hidden" id="bodyy">
+<body id="bodyy">
+
     <div class="centrado" id="onload">
-        <div class="loadingio-spinner-double-ring-8klz9uupyd">
-            <div class="ldio-6k96ilatv2t">
-                <div></div>
-                <div></div>
-                <div>
-                    <div></div>
-                </div>
-                <div>
-                    <div></div>
-                </div>
-            </div>
+        <div class="loader">
+            <div class="item-1"><span></span></div>
+            <div class="item-2"><span></span></div>
+            <div class="item-3"><span></span></div>
+            <div class="item-4"><span></span></div>
+            <div class="item-5"><span></span></div>
+            <div class="item-6"><span></span></div>
+            <div class="item-7"><span></span></div>
+            <div class="item-8"><span></span></div>
         </div>
     </div>
+   
+
     <div class="contenedor grid_venta_alquiler" id="alquiler">
         <header>
             <div class="arriba">
@@ -367,7 +368,6 @@
     <script>AOS.init();</script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="../js/alquiler.js"></script>
-    <script src="../js/carousel.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
 
