--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -43,7 +43,19 @@
     <link rel="stylesheet" href="../css/estilos.css" />
 </head>
 
-<body>
+<body id="bodyy">
+    <div class="centrado" id="onload">
+        <div class="loader">
+            <div class="item-1"><span></span></div>
+            <div class="item-2"><span></span></div>
+            <div class="item-3"><span></span></div>
+            <div class="item-4"><span></span></div>
+            <div class="item-5"><span></span></div>
+            <div class="item-6"><span></span></div>
+            <div class="item-7"><span></span></div>
+            <div class="item-8"><span></span></div>
+        </div>
+    </div>
     <div class="contenedor grid_nosotros" id="nosotros">
         <header>
             <div class="arriba">
