--- a/index.html
+++ b/index.html
@@ -36,19 +36,17 @@
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 
-<body class="hidden">
+<body id="bodyy">
     <div class="centrado" id="onload">
-        <div class="loadingio-spinner-double-ring-8klz9uupyd">
-            <div class="ldio-6k96ilatv2t">
-                <div></div>
-                <div></div>
-                <div>
-                    <div></div>
-                </div>
-                <div>
-                    <div></div>
-                </div>
-            </div>
+        <div class="loader">
+            <div class="item-1"><span></span></div>
+            <div class="item-2"><span></span></div>
+            <div class="item-3"><span></span></div>
+            <div class="item-4"><span></span></div>
+            <div class="item-5"><span></span></div>
+            <div class="item-6"><span></span></div>
+            <div class="item-7"><span></span></div>
+            <div class="item-8"><span></span></div>
         </div>
     </div>
     <div class="contenedor grid_inicio" id="index">
